--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "3.1.17", features = ["derive"] }
 rand = "0.8.5"
 num_enum = "0.5.7"
 nannou = "0.18.1"
