--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-num_enum = "0.5.7"
 nannou = "0.18.1"
+strum = { version = "0.24", features = ["derive"] }
