--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,7 @@ jobs:
           target_name: 'poke-fighting-rust'
 
     steps:
+    - name: Checkout
     - uses: actions/checkout@v3
     - name: Install latest nightly
     - uses: actions-rs/toolchain@v1
