--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,14 +26,14 @@ jobs:
 
     steps:
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Install latest nightly
-    - uses: actions-rs/toolchain@v1
+      uses: actions-rs/toolchain@v1
       with:
         profile: minimal
         toolchain: stable
     - name: Rust cache
-    - uses: Swatinem/rust-cache@v1
+      uses: Swatinem/rust-cache@v1
     - name: Build
       run: cargo build --release --verbose
     - name: Strip symbols
