--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ clap = { version = "3.1.17", features = ["derive"] }
 rand = "0.8.5"
 nannou = "0.18.1"
 strum = { version = "0.24", features = ["derive"] }
+
+[profile.dev]
+opt-level = 3
