--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.1.17", features = ["derive"] }
 rand = "0.8.5"
+lazy_static = "1.4"
 nannou = "0.18.1"
 strum = { version = "0.24", features = ["derive"] }
 
