--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 clap = { version = "3.1.17", features = ["derive"] }
 rand = "0.8.5"
 lazy_static = "1.4"
+once_cell = "1.10"
 nannou = "0.18.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 strum = { version = "0.24", features = ["derive"] }
 
 [profile.dev]
