--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ once_cell = "1.10"
 nannou = "0.18.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 strum = { version = "0.24", features = ["derive"] }
 
 [profile.dev]
