--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rand = "0.8.5"
 lazy_static = "1.4"
 once_cell = "1.10"
 nannou = "0.18.1"
+nannou_egui = "0.5.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strum = { version = "0.24", features = ["derive"] }
